# relevance_map_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/real_robot/workbench-1/02-03-18/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd  wave_metadata.yml
data/real_robot/workbench-1/08-03-18/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd
data/real_robot/workbench-1/10-03-18/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd
data/real_robot/workbench-1/23-02-18/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd
data/real_robot/workbench-1/26-02-18/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd
data/real_robot/workbench-2/07-03-18/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd  wave_metadata.yml
data/real_robot/workbench-2/07-03-18-2/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd
data/real_robot/workbench-2/12-03-18/: classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml
data/real_robot/workbench-2/13-03-18/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd  wave_metadata.yml
data/real_robot/workbench-2/14-03-18/: choice_heat_map.pcd  classifier_eval.yml  classifier_eval_2.yml  classifier_reeval.yml  cloud.pcd
data/simulation/env0_obj0/env0_obj0_archive_0/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_1/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_10/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_11/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_12/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_13/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_14/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_15/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_16/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_17/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_18/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_19/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_2/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_3/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_4/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_5/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_6/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_7/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_8/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj0/env0_obj0_archive_9/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_0/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_1/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_10/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_11/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_12/: classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_13/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_14/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_15/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_16/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_17/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_18/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_19/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_2/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_3/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_4/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_5/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_6/: choice_heat_map.pcd  classifier_eval.yml
data/simulation/env0_obj1/env0_obj1_archive_7/: choice_heat_map.pcd  classifier_eval.yml
examples/: example_node.cpp  example_node.launch  train_classifier.cpp  train_classifier.launch
examples/gmm_archives/1/: dataset_centralFPFHLabHist.yml  gmm_archive_centralFPFHLabHist
examples/gmm_archives/2/: dataset_centralFPFHLabHist.yml  gmm_archive_centralFPFHLabHist
examples/gmm_archives/3/: dataset_centralFPFHLabHist.yml  gmm_archive_centralFPFHLabHist
include/relevance_map/: parameters.hpp  relevance_map_node.hpp  score_computation.hpp  utilities.hpp
include/rgbd_utils/: rgbd_subscriber.hpp  rgbd_to_pointcloud.h
launch/: cnn_features_server.launch  evaluate_archive.launch  features_variability.launch  test_rgbd_utils.launch
python/: class_analyse_tools.py  graph_nbr_comp.py  graph_pos_neg.py  graph_pra.py
src/: cnn_features_serv.py  relevance_map_node.cpp
src/rgbd_utils/: rgbd_subscriber.cpp  rgbd_to_pointcloud.cpp  test_rgbd_utils.cpp
srv/: cnn_features.srv
tools/: evaluate_archive.cpp  evaluate_classifier.cpp  features_variability.cpp  pcd_to_relevance_map.cpp
(+140 files in other folders)
